soroban-sdk/tests/trybuild/contractimpl_fn_params_too_many.stderr
error: contract function has too many parameters, max count 10 parameters
  --> tests/macros_fails/macros_spec_fn_params_too_many.rs:18:9
   |
18 |         p11: u32,
   |         ^^^
